--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'French Canadians -- Fiction'
 - !lcsh 'United States -- History -- 19th century -- Fiction'
+- GITenberg
 title: Wanderings of French Ed
 url: http://www.gutenberg.org/ebooks/43292
